--- a/front/src/Component/Dash/Navbar.css
+++ b/front/src/Component/Dash/Navbar.css
@@ -31,7 +31,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 33px;
+  gap: 27px;
   cursor: pointer;
   width: 67%;
   align-items: flex-start;
@@ -41,7 +41,7 @@
 .navbar_outer > section > div > span > p {
   color: #000;
   font-family: " Nunito";
-  font-size: 16px;
+  font-size: 15px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
@@ -54,8 +54,7 @@ p {
 .selected_tag {
   border-radius: 30px;
   background-color: white;
-  /* padding: 15px 25px 15px 44px;
- */
+ 
   padding: 15px 25px;
   text-align: center;
   background: #fff;
@@ -68,4 +67,35 @@ p {
   width: 30px;
   height: 19px;
   background: #fff;
+}
+
+
+
+.logout{
+  color: #2b2b2b;
+  font-family: " Nunito";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  background: #f07f7f;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  padding: 7px 25px;
+  border-radius: 3px;
+}
+
+
+@media (max-width: 976px) {
+  .navbar_outer {
+    width: 35vw;
+  }
+  .navbar_outer > section > div > span > p {
+    font-size: 14px;
+  }
+  .navbar_outer > section > div > span{
+    width: 52%;
+    gap: 14px;
+  }
+
 }
